--- a/models/ssd_inception_v2/ssd_inception_v2_pipeline.config
+++ b/models/ssd_inception_v2/ssd_inception_v2_pipeline.config
@@ -1,3 +1,9 @@
+# SSD with Inception v2 configuration for MSCOCO Dataset.
+# Users should configure the fine_tune_checkpoint field in the train config as
+# well as the label_map_path and input_path fields in the train_input_reader and
+# eval_input_reader. Search for "PATH_TO_BE_CONFIGURED" to find the fields that
+# should be configured.
+
 model {
   ssd {
     num_classes: 3
@@ -144,6 +150,10 @@ train_config: {
   }
   fine_tune_checkpoint: "/home/andri/konbini_detector/models/from_zoo/ssd_inception_v2_coco_2017_11_17/model.ckpt"
   from_detection_checkpoint: true
+  # Note: The below line limits the training process to 200K steps, which we
+  # empirically found to be sufficient enough to train the pets dataset. This
+  # effectively bypasses the learning rate schedule (the learning rate will
+  # never decay). Remove the below line to train indefinitely.
   num_steps: 200000
   data_augmentation_options {
     random_horizontal_flip {
